[package]
name = "aigame"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
sdl2 = "*"
paste = "*"
unstringify = "*"
seq-macro = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bevy = "0.5"
bevy_ecs_tilemap = "0.4.0"
bevy_console = "0.2.1"