[package]
name = "aigame"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
paste = "*"
unstringify = "*"
seq-macro = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"

futures-lite = "*"

bevy = "0.5"
bevy_egui = "0.7.0"
bevy_networking_turbulence = { version = "0.3" }
simdnoise = "3.1.6"

puffin = { version = "0.8.1", optional = true}
puffin_egui = { version = "0.7.0", optional = true }
[features]
debug = ["puffin", "puffin_egui"]