[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "*"

# bevy-steamworks = "0.1.0"
bevy_networking_turbulence = { version = "0.3" }
bevy_console = "0.2.1"
aigame = {path = "../aigame"}
server = {path = "../server"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = {version = "0.11.2", features = ["std", "unsealed_read_write"] }

bevy = "0.5"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1